--- a/NeteaseNews/News.storyboard
+++ b/NeteaseNews/News.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Banner Loop Controller-->
@@ -13,20 +14,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aax-54-RWI">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="318" height="246"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Lxd-Qm-3mH">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="headline" id="Lxd-Qm-3mH" customClass="KCLHeadLineCell">
+                                <rect key="frame" x="141" y="0.0" width="318" height="246"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="318" height="246"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYo-tQ-ghw">
+                                            <rect key="frame" x="8" y="221" width="36" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="H7x-mn-NUd">
+                                            <rect key="frame" x="255" y="211" width="55" height="37"/>
+                                            <color key="pageIndicatorTintColor" red="0.79880598520000001" green="1" blue="0.682708015" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="currentPageIndicatorTintColor" red="1" green="0.49898475850000001" blue="0.21562403620000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </pageControl>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XjO-J2-vxE">
+                                            <rect key="frame" x="0.0" y="0.0" width="318" height="213"/>
+                                        </imageView>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="cYo-tQ-ghw" firstAttribute="bottom" secondItem="Lxd-Qm-3mH" secondAttribute="bottomMargin" id="2FH-xN-xvn"/>
+                                    <constraint firstItem="H7x-mn-NUd" firstAttribute="centerY" secondItem="cYo-tQ-ghw" secondAttribute="centerY" id="5HG-Rx-HiB"/>
+                                    <constraint firstItem="cYo-tQ-ghw" firstAttribute="top" secondItem="XjO-J2-vxE" secondAttribute="bottom" constant="8" id="8va-Mw-AWW"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9tD-Uv-BV3"/>
+                                    <constraint firstItem="H7x-mn-NUd" firstAttribute="trailing" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9uU-7a-Tui"/>
+                                    <constraint firstItem="cYo-tQ-ghw" firstAttribute="leading" secondItem="XjO-J2-vxE" secondAttribute="leading" constant="8" id="IL3-i4-wP2"/>
+                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="top" secondItem="Lxd-Qm-3mH" secondAttribute="topMargin" constant="-8" id="lge-K1-lJJ"/>
+                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="leading" secondItem="Lxd-Qm-3mH" secondAttribute="leadingMargin" constant="-8" id="yHc-AB-Qt5"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imgView" destination="XjO-J2-vxE" id="AD6-hX-QSh"/>
+                                    <outlet property="pageControl" destination="H7x-mn-NUd" id="UFs-jy-sSO"/>
+                                    <outlet property="titleView" destination="cYo-tQ-ghw" id="McP-Ug-WF2"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -37,7 +69,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxW-1Y-cXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="668" y="400"/>
+            <point key="canvasLocation" x="553" y="271"/>
         </scene>
     </scenes>
 </document>
