刷新显示数据
1. viewDidLoad中
    - 异步请求, 回调 GET 取得的数据
    - 此前已执行数据源方法(无数据)
    - 重写数据属性的 setter 方法
2. 重写 Setter 方法
    - 设置数据后, 刷新

--- a/NeteaseNews/News.storyboard
+++ b/NeteaseNews/News.storyboard
@@ -13,6 +13,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="olk-7x-TMq">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.97254901959999995" green="0.97647058819999999" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aax-54-RWI">
                             <size key="itemSize" width="318" height="246"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
