--- a/NeteaseNews/News.storyboard
+++ b/NeteaseNews/News.storyboard
@@ -40,7 +40,7 @@
                                             <color key="currentPageIndicatorTintColor" red="1" green="0.49898475850000001" blue="0.21562403620000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </pageControl>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XjO-J2-vxE">
-                                            <rect key="frame" x="0.0" y="0.0" width="318" height="213"/>
+                                            <rect key="frame" x="0.0" y="28" width="318" height="185"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -52,7 +52,7 @@
                                     <constraint firstAttribute="trailingMargin" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9tD-Uv-BV3"/>
                                     <constraint firstItem="H7x-mn-NUd" firstAttribute="trailing" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9uU-7a-Tui"/>
                                     <constraint firstItem="cYo-tQ-ghw" firstAttribute="leading" secondItem="XjO-J2-vxE" secondAttribute="leading" constant="8" id="IL3-i4-wP2"/>
-                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="top" secondItem="Lxd-Qm-3mH" secondAttribute="topMargin" constant="-8" id="lge-K1-lJJ"/>
+                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="top" secondItem="Lxd-Qm-3mH" secondAttribute="topMargin" constant="20" id="lge-K1-lJJ"/>
                                     <constraint firstItem="XjO-J2-vxE" firstAttribute="leading" secondItem="Lxd-Qm-3mH" secondAttribute="leadingMargin" constant="-8" id="yHc-AB-Qt5"/>
                                 </constraints>
                                 <connections>
@@ -67,6 +67,9 @@
                             <outlet property="delegate" destination="i6K-Oz-Ro9" id="JKg-LU-Qnd"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <outlet property="flowLayout" destination="aax-54-RWI" id="6rZ-gX-dDo"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxW-1Y-cXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
