--- a/NeteaseNews/News.storyboard
+++ b/NeteaseNews/News.storyboard
@@ -1,17 +1,52 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i6K-Oz-Ro9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MMF-b9-5Qv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Banner Loop Controller-->
+        <!--Table View Controller-->
+        <scene sceneID="d5S-1N-hzm">
+            <objects>
+                <tableViewController id="MMF-b9-5Qv" customClass="KCLTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="YVF-4o-bfj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <containerView key="tableHeaderView" opaque="NO" contentMode="scaleToFill" id="W5i-tO-OxP">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <connections>
+                                <segue destination="i6K-Oz-Ro9" kind="embed" id="rdx-ks-K3L"/>
+                            </connections>
+                        </containerView>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="5qH-Wu-7P6">
+                                <rect key="frame" x="0.0" y="328" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5qH-Wu-7P6" id="upp-EX-3BZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MMF-b9-5Qv" id="5wB-1n-cv4"/>
+                            <outlet property="delegate" destination="MMF-b9-5Qv" id="XkA-tz-wSq"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eKC-lJ-aAO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-210" y="200"/>
+        </scene>
+        <!--Image Loop Controller-->
         <scene sceneID="c4w-Aa-Lvu">
             <objects>
-                <collectionViewController id="i6K-Oz-Ro9" customClass="BannerLoopController" sceneMemberID="viewController">
+                <collectionViewController id="i6K-Oz-Ro9" customClass="KCLImageLoopController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="olk-7x-TMq">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97647058819999999" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aax-54-RWI">
@@ -31,7 +66,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYo-tQ-ghw">
                                             <rect key="frame" x="8" y="221" width="36" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="H7x-mn-NUd">
@@ -40,7 +75,7 @@
                                             <color key="currentPageIndicatorTintColor" red="1" green="0.49898475850000001" blue="0.21562403620000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </pageControl>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XjO-J2-vxE">
-                                            <rect key="frame" x="0.0" y="28" width="318" height="185"/>
+                                            <rect key="frame" x="0.0" y="20" width="318" height="193"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -52,7 +87,7 @@
                                     <constraint firstAttribute="trailingMargin" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9tD-Uv-BV3"/>
                                     <constraint firstItem="H7x-mn-NUd" firstAttribute="trailing" secondItem="XjO-J2-vxE" secondAttribute="trailing" constant="-8" id="9uU-7a-Tui"/>
                                     <constraint firstItem="cYo-tQ-ghw" firstAttribute="leading" secondItem="XjO-J2-vxE" secondAttribute="leading" constant="8" id="IL3-i4-wP2"/>
-                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="top" secondItem="Lxd-Qm-3mH" secondAttribute="topMargin" constant="20" id="lge-K1-lJJ"/>
+                                    <constraint firstItem="XjO-J2-vxE" firstAttribute="top" secondItem="Lxd-Qm-3mH" secondAttribute="topMargin" constant="12" id="lge-K1-lJJ"/>
                                     <constraint firstItem="XjO-J2-vxE" firstAttribute="leading" secondItem="Lxd-Qm-3mH" secondAttribute="leadingMargin" constant="-8" id="yHc-AB-Qt5"/>
                                 </constraints>
                                 <connections>
@@ -73,7 +108,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxW-1Y-cXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="553" y="271"/>
+            <point key="canvasLocation" x="576" y="200"/>
         </scene>
     </scenes>
 </document>
