tid 拼接 GET 请求地址, 切换频道数据
1. urlStr = tid 拼接的 GET 地址
    - 传递地址: Channel.urlStr -> HomeController -> HomeCell.urlStr ->
NewsController -> News.urlStr
    - 传递数据, 不做他用, 重写 Setter 方法, 不必赋予属性;
2. News 中:
    - 获取 newsList 的方法中: 增加 urlStr 参数, 代替静态地址
    - nc 取得 urlStr, 传入作 GET 请求地址, 调用本方法

--- a/NeteaseNews/Main.storyboard
+++ b/NeteaseNews/Main.storyboard
@@ -19,6 +19,7 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7a-Pe-MWM">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="e72-zB-xrv"/>
                                 </constraints>
